@@ -4,5 +4,6 @@
 - module: kvm
   #metricsets:
   #  - dommemstat
+  #  - status
   period: 10s
   hosts: ["unix:///var/run/libvirt/libvirt-sock"]
